<resources>
    <string name="app_name">test</string>
    <string name="title">楊自強</string>
    <string name="d1">04/09\n(四)</string>
    <string name="d2">04/10\n(五)</string>
    <string name="d3">04/11\n(六)</string>
    <string name="t1">診間</string>
    <string name="t2">上午診</string>
    <string name="t3">下午診</string>
    <string name="t4">夜間診</string>
    <string name="t1.1">105</string>
    <string name="t3.1">神經內科</string>
    <string name="date">202/04/08~2020/04/14</string>
</resources>