<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6CCCD8"
    tools:context=".MainActivity">

    <TableRow
        android:layout_width="419dp"
        android:layout_height="72dp"
        android:background="#FFFFFF"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="117dp"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:text="@string/title"
            android:textSize="36sp"
            android:textStyle="bold" />
    </TableRow>

    <EditText
        android:id="@+id/editTextDate2"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/d1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/b1"
        android:layout_width="70dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextDate2"
        app:layout_constraintStart_toEndOf="@+id/editTextDate2"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <Button

        android:id="@+id/d1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="265dp"
        android:background="#FDC3B0"
        android:text="@string/d1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/d2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/d2"
        app:layout_constraintBottom_toBottomOf="@+id/d1"
        app:layout_constraintEnd_toStartOf="@+id/d3"
        app:layout_constraintHorizontal_bias="0.814"
        app:layout_constraintStart_toEndOf="@+id/d1" />

    <Button
        android:id="@+id/d3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/d3"
        app:layout_constraintBottom_toBottomOf="@+id/d2"
        app:layout_constraintEnd_toStartOf="@+id/b2" />

    <ImageButton
        android:id="@+id/b2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/d3"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_media_play" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="388dp"
        android:layout_height="168dp"
        android:layout_row="2"
        android:layout_column="4"
        android:background="#FFFFFF"
        android:layout_gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="74dp"
            android:layout_height="42dp"
            android:background="#8BC34A"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/t1"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_gravity="fill|fill_horizontal|center_vertical"
            app:layout_row="0" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="99dp"
            android:layout_height="42dp"
            android:background="#4CAF50"
            android:gravity="center"
            android:text="@string/t2"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_column="1"
            app:layout_gravity="fill"
            app:layout_row="0" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="99dp"
            android:layout_height="41dp"
            android:background="#8BC34A"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/t3"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_column="2"
            app:layout_gravity="fill"
            app:layout_row="0" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="94dp"
            android:layout_height="42dp"
            android:background="#4CAF50"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/t4"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_column="3"
            app:layout_gravity="fill"
            app:layout_row="0" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="74dp"
            android:layout_height="131dp"
            android:gravity="center"
            android:text="@string/t1.1"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_gravity="fill"
            app:layout_row="1" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="101dp"
            android:layout_height="114dp"
            android:gravity="center_vertical"
            android:text=""
            app:layout_column="1"
            app:layout_gravity="fill"
            app:layout_row="1" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="99dp"
            android:layout_height="131dp"
            android:gravity="center_vertical"
            android:text="@string/t3.1"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_column="2"
            app:layout_gravity="fill|fill_horizontal"
            app:layout_row="1" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="95dp"
            android:layout_height="104dp"
            android:gravity="center_vertical"
            android:text=""
            app:layout_column="3"
            app:layout_gravity="fill|fill_vertical"
            app:layout_row="1" />
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>